--- a/md/基础知识/01/01.html
+++ b/md/基础知识/01/01.html
@@ -36,7 +36,8 @@
 <ul class="articles"><li class="chapter active" data-level="2.1.1" data-path="01.html"><a href="01.html"><b>2.1.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.1.2" data-path="02.html"><a href="02.html"><b>2.1.2.</b>第二节 健康管理的基本策略</a></li>
 <li class="chapter" data-level="2.1.3" data-path="03.html"><a href="03.html"><b>2.1.3.</b>第三节 健康管理的发展趋势</a></li>
-<li class="chapter" data-level="2.1.4" data-path="04.html"><a href="04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li></ul></li>
+<li class="chapter" data-level="2.1.4" data-path="04.html"><a href="04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li>
+<li class="chapter" data-level="2.1.5" data-path="习题.html"><a href="习题.html"><b>2.1.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
@@ -136,7 +137,7 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第一节 概述</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康管理的概念 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理的目标与特点 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康管理的理论与实践溯源</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康管理的科学基础</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>健康管理的基本步骤✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>健康管理的服务流程✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>提供健康管理服务的机构</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第一节 概述</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康管理的概念 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理的目标与特点 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康管理的理论与实践溯源</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康管理的科学基础</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>健康管理的基本步骤✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>健康风险评估的主要作用 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>健康管理的服务流程 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>健康管理与相关学科关系</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>提供健康管理服务的机构</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
                         <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第一节 概述</h1>
 <h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理的概念 ✳</h2>
 <p>健康管理的发展与社会文明进步息息相关。</p>
@@ -152,11 +153,12 @@
 </ul>
 </li>
 </ul>
-<p>健康管理是以<code class="language-vim">现代健康概念</code>（生理、心理和社 会适应能力）和新的医学模式（生理 - 心理 - 社会）以及<code class="language-vim">中医治未病</code>为指导，通过采用<code class="language-vim">现代医学和现代管理学</code>的理论、技术、方法和手段，对<code class="language-vim">个体和群体</code>整体健康状况及其<code class="language-vim">影响健康的危险因素</code>进行全面<code class="language-vim">检 测、评估、有效干预与连续跟踪服务</code>的医学行为及过程。</p>
-<p>健康管理的宗旨：<code class="language-vim">有效地利用有限的资源来达到最大的健康效果</code>；</p>
-<p>主体：经过系统医学教育或培训并取得相应资质的医务工作者，客体是<code class="language-vim">健康人群、亚健康人群以及慢性非传染性疾病早期或康复期人群</code>。</p>
-<p>公众理念：<code class="language-vim">病前主动防，病后科学管，跟踪服务不间断</code>。</p>
-<p>任务：<code class="language-vim">防大病、管慢病、促健康</code>。</p>
+<p>健康管理的定义：<code class="language-vim">是对个体或群体的健康进行</code>全面监控、分析、评估、提供健康咨询和指导以及对<code class="language-vim">健康危险因素</code>进行干预的<code class="language-vim">全过程</code>。 ✳</p>
+<p>健康管理的宗旨：<code class="language-vim">有效地利用有限的资源来达到最大的健康效果</code></p>
+<p>健康管理的主体：<code class="language-vim">经过系统医学教育或培训并取得相应资质的医务工作者</code></p>
+<p>健康管理的客体：<code class="language-vim">健康人群</code>、<code class="language-vim">亚健康人群</code>以及慢性非传染性疾病<code class="language-vim">早期</code>或<code class="language-vim">康复期</code>人群</p>
+<p>健康管理的公众理念：<code class="language-vim">病前主动防，病后科学管，跟踪服务不间断</code></p>
+<p>健康管理的任务：<code class="language-vim">防大病、管慢病、促健康</code></p>
 <h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理的目标与特点 ✳</h2>
 <ul>
 <li>
@@ -185,28 +187,74 @@
 <p>健康管理的具体服务内容和工作流程必须依据<code class="language-vim">循证医学和循证公共卫生的标准</code>和学术界已经公认的预防和控制指南及规范。</p>
 <h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康管理的理论与实践溯源</h2>
 <p><code class="language-vim">治未病思想</code>源自距今已有两千余年历史的中医学典籍《黄帝内经》。</p>
-<p>《素问 · 四气调神大论篇》指出：“圣人不治已病治未病，不治已乱治未乱，此之谓也。夫病已成而后药之，乱已成而后治之，譬如渴而穿井，斗而铸锥，不亦晚乎？”</p>
 <p>《黄帝内经》中讲，<code class="language-vim">上医治未病，中医治欲病，下医治已病</code>。</p>
 <h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康管理的科学基础</h2>
 <p>健康管理是要对危险因素进行早期发现、早期评估和早期干预，以实现维护健康的目的。</p>
 <h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 健康管理的基本步骤✳</h2>
+<p>总览</p>
+<ol>
+<li>了解健康</li>
+<li>评估健康</li>
+<li>计划、干预、管理健康</li>
+<li>干预、管理效果评估</li>
+</ol>
+<p>细分：</p>
 <ol>
 <li>
 <p>了解和掌握健康，开展健康信息收集和健康检查。</p>
-<p>个人健康信息包括<code class="language-vim">个人一般情况</code>（性别、年龄等）、<code class="language-vim">目前健康状况和疾病家族史</code>、<code class="language-vim">生活方式</code>（膳食、身体活动、吸烟、饮酒等）、<code class="language-vim">体格检查</code>（身高、体重、血压等）和<code class="language-vim">血</code>、<code class="language-vim">尿实验室检查</code>（血脂、血糖等）。</p>
+<ol>
+<li><code class="language-vim">一般情况</code>：性别、年龄、职业等</li>
+<li><code class="language-vim">目前健康状况</code>、<code class="language-vim">疾病既往史</code>、<code class="language-vim">家族史</code></li>
+<li><code class="language-vim">生活方式</code>：膳食、体力活动和运动、吸烟、饮酒、休息</li>
+<li><code class="language-vim">体格检查</code>：身高、体重、血压等</li>
+<li><code class="language-vim">健康知识信念</code>、<code class="language-vim">定性调查</code>、<code class="language-vim">心理状况</code>等</li>
+</ol>
 </li>
 <li>
 <p>关心和评价健康，开展健康风险评价和健康评估。</p>
 <p>根据所收集的健康信息，对个人的健康状况及未来患病或死亡的危险性用<code class="language-vim">数学模型</code>进行<code class="language-vim">量化</code>评估。</p>
 <p>目的是帮助个体综合认识健康风险，鼓励和帮助人们纠正不健康的行为和习惯，制订<code class="language-vim">个性化</code>的健康干预措施并对其效果进行评估。</p>
+<ol>
+<li>
+<p>一般健康风险评估</p>
+<ul>
+<li>生活方式 / 行为危险因素评估</li>
+<li>生理指标危险因素评估</li>
+</ul>
+</li>
+<li>
+<p>疾病风险评估、预测</p>
+<p>健康危险因素：从人群健康和流行病学的角度看，凡是那些能使<code class="language-vim">人群发病和死亡风险</code>（risk）升高的因素即可认为是危险因素，</p>
+</li>
+</ol>
 </li>
 <li>
 <p>干预和促进健康，开展健康风险干预和健康促进。</p>
 <p>以多种形式来帮助个人采取行动、纠正不良的生活方式和习惯，控制健康危险因素，实现个人健康管理计划的目标。</p>
+<p>主要内容有：膳食指导、运动干预、心理疏导、戒烟限酒</p>
 <p>与一般<code class="language-vim">健康教育</code>和<code class="language-vim">健康促进</code>不同，健康管理中的健康干预是<code class="language-vim">个性化</code>的，根据个体的健康危险因素，进行个体指导，设定个体目标，并动态追踪效果。</p>
 </li>
+<li>
+<p>干预效果评估</p>
+<p>健康管理的最终产出，也是工作成就的评价指标，它主要从以下几个层次评估：</p>
+<ol>
+<li>健康知识、信念</li>
+<li>生活习惯、行为</li>
+<li>生理（体检）指标</li>
+<li>未来患病 / 死亡危险性</li>
 </ol>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 健康管理的服务流程✳</h2>
+</li>
+</ol>
+<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 健康风险评估的主要作用 ✳</h2>
+<ul>
+<li>帮助个体综合认识健康危险的因素</li>
+<li>鼓励和帮助人们修正不健康的行为</li>
+<li>制定个体化健康干预措施</li>
+<li>评估干预措施的有效性</li>
+<li>对人群进行分层管理，筛选高危人群，进行分层管理</li>
+<li>其他，如在健康保险行业的核保等。</li>
+</ul>
+<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 健康管理的服务流程 ✳</h2>
 <ol>
 <li>
 <p>健康调查与健康体检</p>
@@ -243,13 +291,22 @@
   D--跟踪指导健康关于过程--&gt;E[实施个体与群体健康干预];
   E--连续收集健康信息--&gt;B
 </div>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 提供健康管理服务的机构</h2>
+<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 健康管理与相关学科关系</h2>
 <ul>
-<li>医院、健康服务机构、社区及工作场；</li>
-<li>政府通过政策立法影响人们的消费行为及健康风险控制的策略；</li>
-<li>商业服务机构，如体检中心、医院及保险机构提高个人参与的积极性；</li>
-<li>企业及集体单位会通过自主或服务外包的方式来开展健康管理；</li>
-<li>健康保险公司及一些医疗保健机构。</li>
+<li>预防医学理念：三级预防</li>
+<li>健康教育</li>
+<li>流行病学</li>
+<li>营养学、健康体育、心理学、成瘾行为</li>
+<li>临床医学、全科医学、社区卫生、中医</li>
+<li>管理学理念</li>
+</ul>
+<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 提供健康管理服务的机构</h2>
+<ul>
+<li>健康保险公司、健康管理公司</li>
+<li>医院保健和健康管理部门</li>
+<li>医院和民营健康体检机构</li>
+<li>社区医疗卫生服务机构</li>
+<li>机关单位、企业、不对、学校医务室</li>
 </ul>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
