--- a/md/基础知识/01/02.html
+++ b/md/基础知识/01/02.html
@@ -36,7 +36,8 @@
 <ul class="articles"><li class="chapter" data-level="2.1.1" data-path="01.html"><a href="01.html"><b>2.1.1.</b>第一节 概述</a></li>
 <li class="chapter active" data-level="2.1.2" data-path="02.html"><a href="02.html"><b>2.1.2.</b>第二节 健康管理的基本策略</a></li>
 <li class="chapter" data-level="2.1.3" data-path="03.html"><a href="03.html"><b>2.1.3.</b>第三节 健康管理的发展趋势</a></li>
-<li class="chapter" data-level="2.1.4" data-path="04.html"><a href="04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li></ul></li>
+<li class="chapter" data-level="2.1.4" data-path="04.html"><a href="04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li>
+<li class="chapter" data-level="2.1.5" data-path="习题.html"><a href="习题.html"><b>2.1.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
@@ -138,8 +139,9 @@
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第二节 健康管理的基本策略</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>生活方式管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>需求管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>疾病管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>灾难性病伤管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>残疾管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>综合的人群健康管理</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
                         <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第二节 健康管理的基本策略</h1>
+<p>健康管理的基本策略：<code class="language-vim">健康危险因素的管理</code>。</p>
 <p>健康管理的<code class="language-vim">基本策略</code>是通过健康评估和控制健康风险，达到维护健康的目的。</p>
-<p>健康信息收集、健康风险评估和健康危险干预三部分中前两者旨在提供有<code class="language-vim">针对性的个性化健康信息</code>来调动个体降低本身健康风险的积极性，而健康危险干预则是根据循证医学的研究结果指导个体维护自己的健康，降低已经存在的健康风险。</p>
+<p><code class="language-vim">健康信息收集</code>、<code class="language-vim">健康风险评估</code>和<code class="language-vim">健康危险干预</code>三部分中<code class="language-vim">前两者</code>旨在提供有<code class="language-vim">针对性的个性化健康信息来调动个体降低本身健康风险的积极性</code>，而<code class="language-vim">健康危险干预</code>则是根据<code class="language-vim">循证医学</code>的研究结果<code class="language-vim">指导个体维护自己的健康，降低已经存在的健康风险</code>。</p>
 <ul>
 <li>常见慢性病及其共同危险因素之间的内在关系</li>
 </ul>
@@ -161,7 +163,7 @@
 <li>
 <p>生活方式管理的概念</p>
 <p>以个人或自我为核心的卫生保健活动。</p>
-<p><code class="language-vim">膳食</code>、<code class="language-vim">体力活动</code>、<code class="language-vim">吸烟</code>、<code class="language-vim">饮酒</code>、<code class="language-vim">精神压力</code>是对国人进行生活管理的重点。</p>
+<p>生活方式管理是重点，主要包括：<code class="language-vim">膳食</code>、<code class="language-vim">体力活动</code>、<code class="language-vim">吸烟</code>、<code class="language-vim">饮酒</code>、<code class="language-vim">精神压力</code>等。</p>
 </li>
 <li>
 <p>生活方式管理的特点 ✳</p>
@@ -169,7 +171,7 @@
 <li>以个人为中心，强调个体的健康责任和作用</li>
 <li>以预防为主，有效整合三级预防，尤其是重视一级预防，控制健康危险因素。</li>
 </ol>
-<p>预防是生活方式管理的核心</p>
+<p><code class="language-vim">预防</code>是生活方式管理的<code class="language-vim">核心</code></p>
 </li>
 <li>
 <p>健康行为改变的技术 ✳</p>
@@ -182,13 +184,10 @@
 </li>
 </ol>
 <h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 需求管理</h2>
-<ol>
-<li>
-<p>需求管理的概念</p>
-<p>通过帮助<code class="language-vim">健康消费者</code>维<code class="language-vim">护自身健康和寻求恰当的卫生服务</code>，控制卫生成本，促进卫生服务的合理利用。</p>
+<p>需求管理的概念：通过帮助<code class="language-vim">健康消费者维护自身健康和寻求恰当的卫生服务，控制卫生成本，促进卫生服务的合理利用</code>。</p>
 <p>需求管理的目标是<code class="language-vim">减少昂贵的、临床并非必需的医疗服务，同时改善人群的健康状况</code>。</p>
 <p>需求管理常用的手段：<code class="language-vim">寻找手术的替代疗法、帮助病人减少特定的危险因素并采纳健康的生活方式、鼓励自我保健和干预等</code>。 ✳</p>
-</li>
+<ul>
 <li>
 <p>影响需求的主要因素 ✳</p>
 <ul>
@@ -197,25 +196,31 @@
 <li>患者偏好</li>
 <li>健康因素以外的动机</li>
 </ul>
-<p>感知到的需要包括：个人关于疾病危险和卫生服务益处的知识、个人感知到的推荐疗法的疗效、个人评估疾病问题的能力、个人感知到的疾病的严重性、个人独立处理疾病问题的能力、以及个人对自己处理好疾病问题的信心等。</p>
+<p>感知到的需要包括：<code class="language-vim">个人关于疾病危险和卫生服务益处的知识</code>、<code class="language-vim">个人感知到的推荐疗法的疗效</code>、<code class="language-vim">个人评估疾病问题的能力</code>、<code class="language-vim">个人感知到的疾病的严重性</code>、<code class="language-vim">个人独立处理疾病问题的能力</code>、以及<code class="language-vim">个人对自己处理好疾病问题的信心</code>等。</p>
 </li>
 <li>
 <p>需求管理的主要工具与实施策略 ✳</p>
 <p>常见的方法有：<code class="language-vim">24 小时电话就诊分流服务</code>、<code class="language-vim">转诊服务</code>、<code class="language-vim">基于互联网的卫生信息数据库</code>、<code class="language-vim">健康课堂</code>、<code class="language-vim">服务预约</code>等。</p>
 <p>有的时候，需求管理还会以<code class="language-vim">守门人</code>的形象出现在疾病管理项目中。</p>
 </li>
-</ol>
+</ul>
 <h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 疾病管理</h2>
 <p>疾病管理是<code class="language-vim">一个协调医疗保健干预和与病人沟通的系统</code>，它强调病人自我保健的重要性。</p>
-<p>疾病管理包含：人群识别、循证医学指导、医 生与服务提供者协调工作、病人自我管理教育、过 程与结果的预测和管理、定期报告和反馈。</p>
+<p>疾病管理包含：<code class="language-vim">人群识别</code>、<code class="language-vim">循证医学指导</code>、<code class="language-vim">医生与服务提供者协调工作</code>、<code class="language-vim">病人自我管理教育</code>、<code class="language-vim">过程与结果的预测和管理</code>、<code class="language-vim">定期报告和反馈</code>。</p>
+<ul>
+<li>
 <p>疾病管理的主要特点： ✳</p>
 <ol>
-<li>目标人群是还有特定疾病的患者</li>
+<li>目标人群是患有特定疾病的个体</li>
 <li>关注个体或群体连续健康状况与生活质量</li>
 <li>医疗卫生服务及干预措施的综合协调</li>
 </ol>
+</li>
+</ul>
 <h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 灾难性病伤管理</h2>
 <p>灾难性病伤管理是疾病管理的一个特殊类型，灾难性指对健康的危害十分严重，也可指其造成的医疗卫生花费巨大，常见于<code class="language-vim">肿瘤</code>、<code class="language-vim">肾衰竭</code>、<code class="language-vim">严重外伤</code>等情形。</p>
+<ul>
+<li>
 <p>优秀的灾难性病伤管理项目的特征：</p>
 <ol>
 <li>转诊及时；</li>
@@ -224,12 +229,11 @@
 <li>最大程度地帮助病人进行目我管理；</li>
 <li>尽可能使患者及其家人满意。</li>
 </ol>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 残疾管理</h2>
-<ol>
-<li>
-<p>残疾管理的目的</p>
-<p>减少工作地点发生残疾事故的频率和费用代价。</p>
 </li>
+</ul>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 残疾管理</h2>
+<p>残疾管理的目的：<code class="language-vim">减少工作地点发生残疾事故的频率和费用代价</code>。</p>
+<ol>
 <li>
 <p>造成残疾的原因</p>
 <ul>
