--- a/md/基础知识/01/03.html
+++ b/md/基础知识/01/03.html
@@ -36,7 +36,8 @@
 <ul class="articles"><li class="chapter" data-level="2.1.1" data-path="01.html"><a href="01.html"><b>2.1.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.1.2" data-path="02.html"><a href="02.html"><b>2.1.2.</b>第二节 健康管理的基本策略</a></li>
 <li class="chapter active" data-level="2.1.3" data-path="03.html"><a href="03.html"><b>2.1.3.</b>第三节 健康管理的发展趋势</a></li>
-<li class="chapter" data-level="2.1.4" data-path="04.html"><a href="04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li></ul></li>
+<li class="chapter" data-level="2.1.4" data-path="04.html"><a href="04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li>
+<li class="chapter" data-level="2.1.5" data-path="习题.html"><a href="习题.html"><b>2.1.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
@@ -141,8 +142,11 @@
 <h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理的国际发展趋势</h2>
 <p>20 世纪 70 年代末，健康美国人的全民健康行动开始开展，该行动有三大目标：<code class="language-vim">预防疾病</code>、<code class="language-vim">拯救生命</code>；<code class="language-vim">提高人民生活质量</code>；<code class="language-vim">坚持健康促进与疾病预防用以节约开支</code>。✳</p>
 <p><code class="language-vim">日本</code>是亚洲地区开展健康管理较早的国家。</p>
+<p>1959 年，日本八千穂村率先开展健康管理行动</p>
+<p>2000 年，日本厚生省推出了“健康本世纪”计划</p>
+<p>2006 年，日本通过法律形式保障居民的健康管理服务有效实施</p>
 <h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理在中国的需求现状</h2>
-<ol>
+<ul>
 <li>
 <p><code class="language-vim">慢性病</code>成为威胁我国居民健康的主要因素</p>
 <ol>
@@ -151,10 +155,10 @@
 </li>
 <li>
 <p>慢性病相关危险因素流行日益严重</p>
-<ol>
+<ul>
 <li>我国人群超重和肥胖患病率快速上升</li>
-<li><code class="language-vim">膳食不合理</code>、<code class="language-vim">身体活动不足</code>及<code class="language-vim">吸烟</code>是造成多种慢性病的三大行为危险因素</li>
-</ol>
+<li><code class="language-vim">膳食不合理</code>、<code class="language-vim">身体活动不足</code>及<code class="language-vim">吸烟</code>是造成多种慢性病的三大<code class="language-vim">行为危险因素</code></li>
+</ul>
 </li>
 </ol>
 </li>
@@ -165,9 +169,9 @@
 <li>我国社会养老服务体系建设处于起步阶段</li>
 </ol>
 </li>
-</ol>
+</ul>
 <h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康管理与健康中国建设</h2>
-<ol>
+<ul>
 <li>
 <p>《“健康中国 2030”规划纲要》</p>
 <p>中共中央政治局 2016 年 8 月 26 日召开会议，习近平主持会议并审议通过了<code class="language-vim">《“健康中国 2030”规划纲要》</code>。</p>
@@ -178,17 +182,58 @@
 </ol>
 </li>
 <li>
-<p>中国防治慢性病中长期规划 (2017-2025 年）</p>
+<p>中国防治慢性病中长期规划（2017-2025 年）</p>
 <ol>
 <li>突出慢性病防治王作的综合性和社会性</li>
 <li>强调慢性病防控的个人健康责任</li>
 <li>行动计划与预期目标明确可操作</li>
 </ol>
 </li>
+</ul>
+<p>三减三健：减盐、减油、减糖、健康口腔、健康体重、健康骨骼</p>
+<ul>
+<li>
+<p>国务院关于实施健康中国行动的意见</p>
+<ol>
+<li>全方位干预健康影响因素</li>
+<li>维护全生命周期健康</li>
+<li>防控重大疾病</li>
 </ol>
+</li>
+<li>
+<p>全方位干预健康影响因素</p>
+<ol>
+<li>实施健康知识普及行为</li>
+<li>实施合理膳食行为</li>
+<li>实施全民健身行动</li>
+<li>实施控烟行为</li>
+<li>实施心理健康促进行动</li>
+<li>实施健康环境促进行动</li>
+</ol>
+</li>
+<li>
+<p>维护全生命周期健康</p>
+<ol>
+<li>实施妇幼健康促进行动</li>
+<li>实施中小学健康促进行动</li>
+<li>实施职业健康保护行动</li>
+<li>实施老年健康促进行动</li>
+</ol>
+</li>
+<li>
+<p>防控重大疾病</p>
+<ol>
+<li>实施心脑血管疾病防治行动</li>
+<li>实施癌症防治行动</li>
+<li>实施慢性呼吸系统疾病防治行动</li>
+<li>实施糖尿病防治行动</li>
+<li>实施传染病及地方病防控行动</li>
+</ol>
+</li>
+</ul>
 <h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康管理的学科发展</h2>
 <ol>
-<li>中华医学会健康管理学分会 (2007 年成立）</li>
+<li>中华医学会健康管理学分会（2007 年成立）</li>
 <li>健康管理师职业培训</li>
 <li>高等院校健康管理人才培养和科学研究</li>
 <li>科学研究方向
@@ -199,7 +244,7 @@
 </ol>
 </li>
 </ol>
-<p>健康管理师是 <code class="language-vim">2005 年 10 月</code>劳动和社会保障部第四批正式发布的 11 个新职业之一。</p>
+<p>健康管理师是<code class="language-vim">2005 年 10 月</code>劳动和社会保障部第四批正式发布的 11 个新职业之一。</p>
 <p><code class="language-vim">2017 年</code>，健康管理师正式编入新版国家人社部职业资格目录清单。</p>
 <p>健康管理师是<code class="language-vim">从事对人群或个人健康和疾病的监测、分析、评估以及健康维护和健康促进的专业人员</code>。</p>
 <ul>
