--- a/md/基础知识/01/04.html
+++ b/md/基础知识/01/04.html
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../../../../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="../02/index.html" rel="next"/>
+<link href="习题.html" rel="next"/>
 </head>
 <body>
 <div class="book"><div class="book-summary">
@@ -36,7 +36,8 @@
 <ul class="articles"><li class="chapter" data-level="2.1.1" data-path="01.html"><a href="01.html"><b>2.1.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.1.2" data-path="02.html"><a href="02.html"><b>2.1.2.</b>第二节 健康管理的基本策略</a></li>
 <li class="chapter" data-level="2.1.3" data-path="03.html"><a href="03.html"><b>2.1.3.</b>第三节 健康管理的发展趋势</a></li>
-<li class="chapter active" data-level="2.1.4" data-path="04.html"><a href="04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li></ul></li>
+<li class="chapter active" data-level="2.1.4" data-path="04.html"><a href="04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li>
+<li class="chapter" data-level="2.1.5" data-path="习题.html"><a href="习题.html"><b>2.1.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
@@ -136,30 +137,44 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第四节 基本卫生保健</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>基本卫生保健的概念</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>基本卫生保健的原则 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>基本卫生保健的内容</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>基本卫生保健的特点 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>基本卫生保健的意义</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第四节 基本卫生保健</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>基本卫生保健的概念</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>基本卫生保健的原则 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>基本卫生保健的内容</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>基本卫生保健的特点 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>基本卫生保健的意义</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>远期目标</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
                         <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第四节 基本卫生保健</h1>
 <h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 基本卫生保健的概念</h2>
 <p>1978 年 WHO 在<code class="language-vim">阿拉木图</code>召开的首次国际初级卫生保健会议对基本卫生保健（初级卫生保健）下定义：</p>
 <p>基本卫生保健 (Primary Health Care, PHC) 是指<code class="language-vim">最基本的、人人都能得到的、体现社会平等权利的、人民群众和政府都能负担得起和全社会积极参与的卫生保健服务</code>。 ✳</p>
 <ul>
-<li>从居民角度，基本卫生保健必不可少，人人享有和参与，且费用能由国家和人民负担得起的卫生保健。</li>
-<li>从技术方面，基本卫生保健是切实可行、学术上可靠、为社会和社区的个人、家庭所乐于接受。</li>
-<li>从卫生系统角度，基本卫生保健为全体居民提供最基本的卫生保健服务，是最基层的卫生保健组织，是卫生系统的核心部分。</li>
-<li>从政府部门角度，是各级政府的职责，是各级政府全心全意为人民服务、关心人民健康的重要体现。</li>
-<li>从社会经济看，基本卫生保健是社会经济发展的重要组成部分，是精神文明建设的重要内容。</li>
+<li><strong>从居民角度</strong>：基本卫生保健必不可少，人人享有和参与，且费用能由国家和人民负担得起的卫生保健。</li>
+<li><strong>从技术方面</strong>：基本卫生保健是切实可行、学术上可靠、为社会和社区的个人、家庭所乐于接受。</li>
+<li><strong>从卫生系统角度</strong>：基本卫生保健为全体居民提供最基本的卫生保健服务，是最基层的卫生保健组织，是卫生系统的核心部分。</li>
+<li><strong>从政府部门角度</strong>：是各级政府的职责，是各级政府全心全意为人民服务、关心人民健康的重要体现。</li>
+<li><strong>从社会经济发展角度</strong>：基本卫生保健是社会经济发展的重要组成部分，是精神文明建设的重要内容。</li>
 </ul>
 <h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 基本卫生保健的原则 ✳</h2>
-<ol>
-<li>合理布局</li>
-<li>社区参与</li>
-<li>预防为主</li>
-<li>适宜技术</li>
-<li>综合利用</li>
-</ol>
+<ul>
+<li>
+<p>合理布局</p>
+<p>人们接受卫生服务的机会必须均等，不能忽视边远山区，少数民族地区。</p>
+</li>
+<li>
+<p>社区参与</p>
+<p>政府各部嗯协调行动。</p>
+</li>
+<li>
+<p>预防为主</p>
+</li>
+<li>
+<p>适宜技术</p>
+<p>使用的技术、方法和物资应是能被接受的和适用的。</p>
+</li>
+<li>
+<p>综合利用</p>
+<p>与营养、教育、饮水供应和住房等同等属于人类生活中最基本的需要。</p>
+</li>
+</ul>
 <h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 基本卫生保健的内容</h2>
 <ul>
 <li>
-<p>四个方面 ✳</p>
+<p>《阿拉木图宣言》四个方面 ✳</p>
 <ol>
 <li>促进健康</li>
 <li>预防保健</li>
@@ -168,7 +183,7 @@
 </ol>
 </li>
 <li>
-<p>八项内容</p>
+<p>《阿拉木图宣言》八项内容</p>
 <ol>
 <li>对当前主要卫生问题及其预防和控制方法的健康教育。</li>
 <li>改善食品供应和合理营养。</li>
@@ -181,6 +196,8 @@
 </ol>
 </li>
 </ul>
+<p>1981 年第 34 届世界卫生大会，新增一项：
+使用一切可能的方法，通过影响生活方式、控制自然和社会心理环境，来预防和控制非传染疾病（慢性病），促进精神卫生。</p>
 <h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 基本卫生保健的特点 ✳</h2>
 <ol>
 <li>
@@ -218,6 +235,18 @@
 <p>提高精神文明水平</p>
 </li>
 </ol>
+<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 远期目标</h2>
+<ul>
+<li>消灭疾病：
+<ul>
+<li>2010 年：<code class="language-vim">麻风</code></li>
+<li>2020 年：<code class="language-vim">麻疹</code>、<code class="language-vim">淋巴丝虫病</code>、<code class="language-vim">恰加斯病</code>、<code class="language-vim">沙眼</code>、<code class="language-vim">Vit-A</code>维生素 A 缺乏、碘缺乏</li>
+</ul>
+</li>
+<li>人均寿命 <code class="language-vim">&gt;70</code></li>
+<li>5 岁以下儿童死亡率 <code class="language-vim">&lt;45%</code></li>
+<li>孕产妇死亡率 <code class="language-vim">&lt;100/10万</code></li>
+</ul>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
@@ -260,7 +289,7 @@ All rights reserved.</span><span class="footer-modification">
 </a>
 
 
-<a aria-label="Next page: 第二章 临床医学基础知识" class="navigation navigation-next" href="../02/index.html">
+<a aria-label="Next page: 习题" class="navigation navigation-next" href="习题.html">
     <i class="fa fa-angle-right"></i>
 </a>
 
@@ -274,7 +303,7 @@ All rights reserved.</span><span class="footer-modification">
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
                 "previous_page_link": "03.html",
-                "next_page_link": "../02/index.html"
+                "next_page_link": "习题.html"
             },
             "basePath": "../../..",
             "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
