--- a/md/基础知识/01/02.html
+++ b/md/基础知识/01/02.html
@@ -42,7 +42,8 @@
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
 <li class="chapter" data-level="2.2.3" data-path="../02/03.html"><a href="../02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li></ul></li>
+<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
+<li class="chapter" data-level="2.2.5" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
 <li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
@@ -185,6 +186,7 @@
 </ol>
 <h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 需求管理</h2>
 <p>需求管理的概念：通过帮助<code class="language-vim">健康消费者维护自身健康和寻求恰当的卫生服务，控制卫生成本，促进卫生服务的合理利用</code>。</p>
+<p>需求管理的内容：包括自我保健服务和人群就诊分流服务，帮助人们更好地使用医疗服务和管理自己的小病。通过提供一些工具，帮助个人可以更好地利用医疗保健服务，在正确的时间、正确的地点，利用正确的服务类型。</p>
 <p>需求管理的目标是<code class="language-vim">减少昂贵的、临床并非必需的医疗服务，同时改善人群的健康状况</code>。</p>
 <p>需求管理常用的手段：<code class="language-vim">寻找手术的替代疗法、帮助病人减少特定的危险因素并采纳健康的生活方式、鼓励自我保健和干预等</code>。 ✳</p>
 <ul>
