--- a/md/基础知识/01/习题.html
+++ b/md/基础知识/01/习题.html
@@ -42,7 +42,8 @@
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
 <li class="chapter" data-level="2.2.3" data-path="../02/03.html"><a href="../02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li></ul></li>
+<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
+<li class="chapter" data-level="2.2.5" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
 <li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
@@ -416,7 +417,7 @@
 <p>B. 促进社会经济发展</p>
 <p>C. 提高人人健康水平</p>
 <p>D. 提高精神文明水平</p>
-<sec data-title="解析"><div class="panel panel-default"><div class="panel-heading"><b>解析<a class="pull-right section atTitle btn btn-default " target="sectionx31"><span class="fa fa-angle-down" /></a></b></div><div class="panel-collapse collapse" id="sectionx31"><div class="panel-body"><p>B</p><p>基本卫生保健的意义：</p><ol>
+<sec data-title="解析"><div class="panel panel-default"><div class="panel-heading"><b>解析<a class="pull-right section atTitle btn btn-default " target="sectionx31"><span class="fa fa-angle-down" /></a></b></div><div class="panel-collapse collapse" id="sectionx31"><div class="panel-body"><p>A</p><p>基本卫生保健的意义：</p><ol>
 <li>充分享有健康权</li>
 <li>促进社会经济发展</li>
 <li>提高人人健康水平</li>
@@ -583,7 +584,7 @@
 <p>C. 制定健康管理计划</p>
 <p>D. 进行健康干预</p>
 <p>E. 评估健康管理效果</p>
-<sec data-title="解析"><div class="panel panel-default"><div class="panel-heading"><b>解析<a class="pull-right section atTitle btn btn-default " target="sectionx44"><span class="fa fa-angle-down" /></a></b></div><div class="panel-collapse collapse" id="sectionx44"><div class="panel-body"><p>ABD</p><p>健康管理的基本步骤：</p><ol>
+<sec data-title="解析"><div class="panel panel-default"><div class="panel-heading"><b>解析<a class="pull-right section atTitle btn btn-default " target="sectionx44"><span class="fa fa-angle-down" /></a></b></div><div class="panel-collapse collapse" id="sectionx44"><div class="panel-body"><p>ABDE</p><p>健康管理的基本步骤：</p><ol>
 <li>了解健康</li>
 <li>评估健康</li>
 <li>计划、干预、管理健康</li>
