--- a/md/基础知识/02/01.html
+++ b/md/基础知识/02/01.html
@@ -42,7 +42,8 @@
 <ul class="articles"><li class="chapter active" data-level="2.2.1" data-path="01.html"><a href="01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="02.html"><a href="02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
 <li class="chapter" data-level="2.2.3" data-path="03.html"><a href="03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="04.html"><a href="04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li></ul></li>
+<li class="chapter" data-level="2.2.4" data-path="04.html"><a href="04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
+<li class="chapter" data-level="2.2.5" data-path="习题.html"><a href="习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
 <li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
@@ -144,20 +145,57 @@
 <h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 临床医学的学科分类和主要特征</h2>
 <p>临床专业学科大体上有 5 种建立方式。</p>
 <ul>
-<li>按治疗手段建立的学科：内科学、外科学、理疗学、放射治疗学、核医学、营养治疗学和心理治疗学等。</li>
-<li>按治疗对象建立的学科：妇产科学、儿科学、老年病学、危重病医学、职业病学等。</li>
-<li>按人体的系统或解剖部位建立的学科：口腔科学、皮肤性病学、眼科学、神经病学、耳鼻咽喉科学、心血管内科、呼吸内科、泌尿外科、胸外科等。</li>
-<li>按病种建立的学科：结核病学、肿瘤学、精神病学等。</li>
-<li>按诊断手段建立的科学：临床病理学、医学检验学、放射诊断学、超声诊断学等。</li>
+<li>
+<p>按治疗手段建立的学科</p>
+<p>内科学（药物治疗为主）、外科学（手术治疗为主）、理疗学、放射治疗学、核医学、营养治疗学和心理治疗学等。</p>
+</li>
+<li>
+<p>按治疗对象建立的学科</p>
+<p>妇产科学、儿科学、老年病学、围生医学、危重病医学、职业病学等。</p>
+</li>
+<li>
+<p>按人体的系统或解剖部位建立的学科</p>
+<p>口腔科学、皮肤性病学、眼科学、神经病学、耳鼻咽喉科学，三级学科：心血管内科、呼吸内科、泌尿外科、胸外科等。</p>
+</li>
+<li>
+<p>按病种建立的学科</p>
+<p>结核病学、肿瘤学、精神病学等。</p>
+</li>
+<li>
+<p>按诊断手段建立的科学</p>
+<p>临床病理学、医学检验学、放射诊断学、超声诊断学等。</p>
+</li>
 </ul>
+<p>自 20 世纪中期后，由于疾病谱的改变和人口老龄化，这些问题愈显突出，从而导致了<code class="language-vim">全科医学</code>或<code class="language-vim">家庭医学</code>的诞生。</p>
+<ul>
+<li>1969 年，<code class="language-vim">家庭医学</code>在美国成为第 20 个医学专科</li>
+<li>1993 年，中华医学会全科医学分会成立，<code class="language-vim">全科医学</code>在我国正式成为一个临床学科。</li>
+<li>2017 年 10 月 18 日，习近平同志在十九大报告中指出，要加强全科医生队伍建设。</li>
+</ul>
+<p>全科医生：执行全科医疗的卫生服务，又称为家庭医生或家庭医师，是健康管理服务的主要提供者。</p>
+<p>全科医生一般以<code class="language-vim">门诊形式</code>处理<code class="language-vim">常见病</code>、<code class="language-vim">多发病</code>及<code class="language-vim">一般急症</code>的多面手；社区全科医生工作的另一个特点是<code class="language-vim">上门服务</code>，全科医生常以家访的形式上门处理家庭的病人，根据病人的各自不同的情况建立各自的家庭病床和各自的医疗档案。</p>
+<p>全科医生应具备的素质及知识结构包含有：<code class="language-vim">综合性的知识</code>、<code class="language-vim">高尚的素质</code>、<code class="language-vim">丰富的生活经验</code>、<code class="language-vim">卓越的管理才能</code>和<code class="language-vim">执着的科学精神</code>。</p>
 <h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 临床医学的主要特征 ✳</h2>
-<ol>
-<li>临床医学研究和服务的对象是人</li>
-<li>临床工作具有探索性</li>
-<li>临床医学启动医学研究</li>
-<li>临床医学检验医学成果</li>
-</ol>
+<ul>
+<li>
+<p>临床医学研究和服务的对象是人</p>
+<p>复杂性大，超过其他自然科学</p>
+</li>
+<li>
+<p>临床工作具有探索性</p>
+<p>最大限度缓解患者的痛苦，挽救和延长患者的生命</p>
+</li>
+<li>
+<p>临床医学启动医学研究</p>
+<p>医学发展史上，对疾病的认识通常是从临床上现总结出这些疾病的表现规律，然后才进行基础研究。</p>
+</li>
+<li>
+<p>临床医学检验医学成果</p>
+<p>无论是基础医学还是其他学科的医学成果，都必须建立在临床应用中得以检验。</p>
+</li>
+</ul>
 <h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 临床医学的发展趋势</h2>
+<p>研究工作：细胞水平 - 亚细胞水平 - 分子水平；生物 - 心理 - 社会医学模式；新增环境医学、社会医学、职业医学、临床流行病学。</p>
 <ol>
 <li>
 <p>微观深入与宏观扩展</p>
