--- a/md/基础知识/02/04.html
+++ b/md/基础知识/02/04.html
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../../../../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="../03/index.html" rel="next"/>
+<link href="习题.html" rel="next"/>
 </head>
 <body>
 <div class="book"><div class="book-summary">
@@ -42,7 +42,8 @@
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="01.html"><a href="01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="02.html"><a href="02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
 <li class="chapter" data-level="2.2.3" data-path="03.html"><a href="03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter active" data-level="2.2.4" data-path="04.html"><a href="04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li></ul></li>
+<li class="chapter active" data-level="2.2.4" data-path="04.html"><a href="04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
+<li class="chapter" data-level="2.2.5" data-path="习题.html"><a href="习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
 <li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
@@ -220,7 +221,7 @@ All rights reserved.</span><span class="footer-modification">
 </a>
 
 
-<a aria-label="Next page: 第三章 预防医学基础知识" class="navigation navigation-next" href="../03/index.html">
+<a aria-label="Next page: 习题" class="navigation navigation-next" href="习题.html">
     <i class="fa fa-angle-right"></i>
 </a>
 
@@ -234,7 +235,7 @@ All rights reserved.</span><span class="footer-modification">
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
                 "previous_page_link": "03.html",
-                "next_page_link": "../03/index.html"
+                "next_page_link": "习题.html"
             },
             "basePath": "../../..",
             "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
