--- a/md/基础知识/02/index.html
+++ b/md/基础知识/02/index.html
@@ -42,7 +42,8 @@
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="01.html"><a href="01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="02.html"><a href="02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
 <li class="chapter" data-level="2.2.3" data-path="03.html"><a href="03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="04.html"><a href="04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li></ul></li>
+<li class="chapter" data-level="2.2.4" data-path="04.html"><a href="04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
+<li class="chapter" data-level="2.2.5" data-path="习题.html"><a href="习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
 <li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
@@ -144,6 +145,7 @@
 <li><a href="02">第二节 现代医学主要诊断方法和技术</a></li>
 <li><a href="03">第三节 现代医学主要治疗方法</a></li>
 <li><a href="04">第四节 临床医学在健康管理中的应用</a></li>
+<li><a href="%E4%B9%A0%E9%A2%98">习题</a></li>
 </ul>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
