--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="md/基础知识/02/01.html"><a href="md/基础知识/02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="md/基础知识/02/02.html"><a href="md/基础知识/02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
 <li class="chapter" data-level="2.2.3" data-path="md/基础知识/02/03.html"><a href="md/基础知识/02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="md/基础知识/02/04.html"><a href="md/基础知识/02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li></ul></li>
+<li class="chapter" data-level="2.2.4" data-path="md/基础知识/02/04.html"><a href="md/基础知识/02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
+<li class="chapter" data-level="2.2.5" data-path="md/基础知识/02/习题.html"><a href="md/基础知识/02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.3" data-path="md/基础知识/03/index.html"><a href="md/基础知识/03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.3.1" data-path="md/基础知识/03/01.html"><a href="md/基础知识/03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
 <li class="chapter" data-level="2.3.2" data-path="md/基础知识/03/02.html"><a href="md/基础知识/03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
