--- a/md/基础知识/01/index.html
+++ b/md/基础知识/01/index.html
@@ -42,7 +42,8 @@
 <ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
 <li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
 <li class="chapter" data-level="2.2.3" data-path="../02/03.html"><a href="../02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li></ul></li>
+<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
+<li class="chapter" data-level="2.2.5" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
 <li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
@@ -146,6 +147,279 @@
 <li><a href="04">第四节 基本卫生保健</a></li>
 <li><a href="%E4%B9%A0%E9%A2%98">习题</a></li>
 </ul>
+<hr />
+<ul>
+<li>
+<p>健康的概念：</p>
+<ul>
+<li><code class="language-vim">1948 年</code>，世界卫生组织 (WHO) 宪章中首次提出三维的健康概念：<code class="language-vim">健康不仅仅是没有疾病和虚弱，而是一种身体、心理和社会的完好状态</code></li>
+<li><code class="language-vim">1984 年</code>，在《保健大宪章》中进一步将健康概念表述为：<code class="language-vim">健康不仅仅是没有疾病和虚弱，而是包括身体、心理和社会适应能力的完好状态</code></li>
+<li><code class="language-vim">1986 年</code>，WHO 新定义：<code class="language-vim">健康是社会和个人的资源</code>、<code class="language-vim">健康是天天生活的资源，并非生活的目的</code>、<code class="language-vim">健康是个人能力的体现</code></li>
+<li><code class="language-vim">1989 年</code>，WHO 完善了健康概念，指出健康应是<code class="language-vim">生理、心理、社会适应和道德方面的良好状态</code>。</li>
+</ul>
+</li>
+<li>
+<p>1978 年 WHO 在<code class="language-vim">阿拉木图</code>召开的首次国际初级卫生保健会议对基本卫生保健（初级卫生保健）下定义：</p>
+<p>基本卫生保健 (Primary Health Care, PHC) 是指<code class="language-vim">最基本的、人人都能得到的、体现社会平等权利的、人民群众和政府都能负担得起和全社会积极参与的卫生保健服务</code>。 ✳</p>
+</li>
+<li>
+<p>《阿拉木图宣言》四个方面：<code class="language-vim">促进健康</code>、<code class="language-vim">预防保健</code>、<code class="language-vim">合理治疗</code>、<code class="language-vim">社区康复</code></p>
+</li>
+<li>
+<p>《阿拉木图宣言》八项内容</p>
+<ol>
+<li>对当前主要卫生问题及其预防和控制方法的健康教育</li>
+<li>改善食品供应和合理营养</li>
+<li>供应足够的安全卫生水和基本环境卫生设施</li>
+<li>妇幼保健和计划生育</li>
+<li>主要传染病的预防接种</li>
+<li>预防和控制地方病</li>
+<li>常见病和外伤的合理治疗</li>
+<li>提供基本药物</li>
+</ol>
+</li>
+<li>
+<p>基本卫生保健的特点：<code class="language-vim">社会性</code>、<code class="language-vim">群众性</code>、<code class="language-vim">艰巨性</code>、<code class="language-vim">长期性</code></p>
+</li>
+<li>
+<p>1981 年第<code class="language-vim">三十四</code>届世界卫生大会对《阿拉木图宣言》新增一项<code class="language-vim">预防和控制非传染病</code>：<code class="language-vim">使用一切可能的方法，通过影响生活方式、控制自然和社会心理环境，来预防和控制非传染疾病（慢性病），促进精神卫生</code></p>
+</li>
+<li>
+<p>1988 年，纪念 WHO 成立 40 周年提出<code class="language-vim">健康为人人，人人为健康</code>的口号</p>
+</li>
+<li>
+<p>《巴黎宣言》指出 21 世纪卫生保健革命的方向应当是：<code class="language-vim">从疾病治疗为主转向健康管理为中心</code></p>
+</li>
+<li>
+<p>健康管理的科学基础包括：<code class="language-vim">疾病发生前或发生发展过程中提供预防干预阻断、延缓或逆转其进程</code>、<code class="language-vim">引起慢性病发生发展的危险因素，大部分是可以人为干预的</code></p>
+</li>
+<li>
+<p>健康管理的目标包括：</p>
+<ul>
+<li><code class="language-vim">完善健康和福利</code></li>
+<li><code class="language-vim">减少健康危险因素</code></li>
+<li><code class="language-vim">预防疾病高危人群患病</code></li>
+<li><code class="language-vim">易化疾病的早期诊断</code></li>
+<li><code class="language-vim">增加临床效用、效率</code></li>
+<li><code class="language-vim">避免可预防的疾病相关并发症的发生</code></li>
+<li><code class="language-vim">消除或减少无效或不必要的医疗服务</code></li>
+<li><code class="language-vim">对疾病结局作出度量并提供持续的评估和改进</code></li>
+</ul>
+</li>
+<li>
+<p>健康管理的四大步骤：</p>
+<ul>
+<li><code class="language-vim">收集健康信息</code></li>
+<li><code class="language-vim">进行健康及疾病风险性评估</code></li>
+<li><code class="language-vim">进行健康危险因素干预</code></li>
+<li><code class="language-vim">评估健康管理效果</code></li>
+</ul>
+</li>
+<li>
+<p>健康管理的性质包括：</p>
+<ul>
+<li>是对健康资源进行计划、组织、指挥、协调和控制的过程</li>
+<li>一般不干涉疾病的诊断和治疗过程</li>
+<li>集生命科学、管理科学和信息科学为一体的综合学科</li>
+<li>是一个提供综合性医疗卫生服务的模式</li>
+</ul>
+</li>
+<li>
+<p>目前国人对生活方式管理的重点包括：</p>
+<ul>
+<li><code class="language-vim">膳食</code></li>
+<li><code class="language-vim">体力活动</code></li>
+<li><code class="language-vim">吸烟</code></li>
+<li><code class="language-vim">适度饮酒</code></li>
+<li><code class="language-vim">精神压力</code></li>
+</ul>
+</li>
+<li>
+<p>生活方式管理的特点包括：</p>
+<ul>
+<li>以个体为中心，强调个体的健康负责和作用</li>
+<li>以预防为主，有效整合三级预防，尤其是重视一级预防，控制健康危险因素</li>
+<li>通常与其他健康管理策略联合进行</li>
+</ul>
+</li>
+<li>
+<p>健康指导的主要工作内容：</p>
+<ul>
+<li><code class="language-vim">跟踪随访</code></li>
+<li><code class="language-vim">健康教育</code></li>
+<li><code class="language-vim">健康咨询</code></li>
+<li><code class="language-vim">健康维护</code></li>
+</ul>
+</li>
+<li>
+<p>健康需求管理的主要内容：<code class="language-vim">人群就诊分流服务</code>、<code class="language-vim">自我保健服务</code></p>
+</li>
+<li>
+<p>健康需求管理的目的：<code class="language-vim">帮助人们维护自身健康，寻求适当的卫生服务</code>、<code class="language-vim">控制费用，更有效地利用医疗保健服务</code></p>
+</li>
+<li>
+<p>常见的健康需求管理方法有：<code class="language-vim">24 小时电话就诊分流服务</code>、<code class="language-vim">转诊服务</code>、<code class="language-vim">基于互联网的卫生信息数据库</code>、<code class="language-vim">健康课堂</code>、<code class="language-vim">服务预约</code></p>
+</li>
+<li>
+<p>个人感知到的需要包括：</p>
+<ul>
+<li><code class="language-vim">个人关于疾病危险和卫生服务益处的知识</code></li>
+<li><code class="language-vim">个人感知到的疗效</code></li>
+<li><code class="language-vim">个人评估疾病问题的能力</code></li>
+<li><code class="language-vim">个人感知到的疾病的严重性</code></li>
+<li><code class="language-vim">个人独立处理疾病问题的能力</code></li>
+<li><code class="language-vim">个人对自己处理好疾病问题的信心</code></li>
+</ul>
+</li>
+<li>
+<p>健康风险评估的主要内容包括：<code class="language-vim">风险识别</code>、<code class="language-vim">风险分析</code>、<code class="language-vim">群体风险评估</code>、<code class="language-vim">群体风险管理</code></p>
+</li>
+<li>
+<p>疾病管理内容包括：</p>
+<ul>
+<li><code class="language-vim">人群识别</code></li>
+<li><code class="language-vim">循证医学指导</code></li>
+<li><code class="language-vim">医生与服务提供者协调运作</code></li>
+<li><code class="language-vim">病人自我管理教育</code></li>
+<li><code class="language-vim">过程与结果的预测和管理</code></li>
+<li><code class="language-vim">定期报告和反馈</code></li>
+</ul>
+</li>
+<li>
+<p>疾病管理的主要特点：</p>
+<ul>
+<li><code class="language-vim">目标人群是患有特定疾病的个体</code></li>
+<li><code class="language-vim">不以单个病例和/或其单次的就诊事件为中心</code></li>
+<li><code class="language-vim">关注个体或群体连续健康状况与生活质量</code></li>
+<li><code class="language-vim">医疗卫生服务及干预措施的综合协调至关重要</code></li>
+</ul>
+</li>
+<li>
+<p>残疾管理的具体目标：</p>
+<ol>
+<li>防止残疾恶化</li>
+<li>注重<code class="language-vim">功能性</code>能力恢复</li>
+<li>设定实际康复和返工的期望值</li>
+<li>详细说明限制事项和可行事项</li>
+<li>评估医学和社会心理学因素</li>
+<li>与患者和雇主进行有效沟通</li>
+<li>在需要时要考虑复职情况</li>
+<li>要实行循环管理</li>
+</ol>
+</li>
+<li>
+<p>为癌症患者提供各种服务，属于<code class="language-vim">灾难性病伤管理</code></p>
+</li>
+<li>
+<p>健康管理师三级职业功能：<code class="language-vim">健康监测</code>、<code class="language-vim">健康风险评估和分析</code>、<code class="language-vim">健康指导</code>、<code class="language-vim">健康危险因素干预</code>、<code class="language-vim">业务指导</code>、<code class="language-vim">培训与研究</code></p>
+</li>
+<li>
+<p>健康管理师应具有的基础知识包括：</p>
+<ul>
+<li><code class="language-vim">健康管理基本知识</code></li>
+<li><code class="language-vim">健康保险相关知识</code></li>
+<li><code class="language-vim">医学基础知识</code>（<code class="language-vim">预防医学</code>、<code class="language-vim">临床医学</code>、<code class="language-vim">中医学</code>）</li>
+<li><code class="language-vim">其他相关知识</code>（<code class="language-vim">信息</code>、<code class="language-vim">心理</code>、<code class="language-vim">营养</code>、<code class="language-vim">运动</code>、<code class="language-vim">卫生营销</code>、<code class="language-vim">管理学</code>、<code class="language-vim">经济学</code>）</li>
+<li><code class="language-vim">相关法律法规知识</code>（<code class="language-vim">卫生法学</code>、伦理学`）</li>
+</ul>
+</li>
+<li>
+<p>健康管理师应该具备的职业道德：</p>
+<ul>
+<li><code class="language-vim">职业道德基本知识</code></li>
+<li><code class="language-vim">职业守则</code></li>
+<li><code class="language-vim">礼仪和礼貌用语</code></li>
+</ul>
+</li>
+<li>
+<p>我国健康管理产业的实施原则包括：</p>
+<ul>
+<li><code class="language-vim">理论研究与实践探索相结合</code></li>
+<li><code class="language-vim">需求牵引与产业推动相结合</code></li>
+<li><code class="language-vim">体系构建与功能重组相结合</code></li>
+<li><code class="language-vim">技术标准与服务规范相结合</code></li>
+<li><code class="language-vim">引进消化与自主创新相结合</code></li>
+</ul>
+</li>
+<li>
+<p>健康管理业务指导、培训、与研究的内容包括：</p>
+<ul>
+<li><code class="language-vim">理论技术培训</code></li>
+<li><code class="language-vim">指导培训</code></li>
+<li><code class="language-vim">专业研究</code></li>
+<li><code class="language-vim">操作指导</code></li>
+</ul>
+</li>
+<li>
+<p>造成某些国家资源使用效果不佳和不合理的主要原因：<code class="language-vim">管理落后，经费不足</code></p>
+</li>
+<li>
+<p>我国新时期的卫生工作方针：<code class="language-vim">以农村为重点</code>、<code class="language-vim">预防为主</code>、<code class="language-vim">中西医并重</code>、<code class="language-vim">依靠科技与教育</code>、<code class="language-vim">动员全社会参与</code>、<code class="language-vim">为人民健康服务</code>、<code class="language-vim">为社会主义现代化建设服务</code></p>
+</li>
+<li>
+<p>我国在健康需求方面的人口学特征：</p>
+<ul>
+<li>我国社会养老服务体系建设还处于初级阶段</li>
+<li>我国人口老龄化是在未富先老的背景下发生的</li>
+<li>我国人老龄化起步晚、速度快、数量大</li>
+</ul>
+</li>
+<li>
+<p>预计到 2050 年<code class="language-vim">世界人口将超越 90 亿</code></p>
+</li>
+<li>
+<p>根据我国第六次人口普查 15-59 岁人口估算，2010 年我国慢性病患者大约为：</p>
+<ul>
+<li>高血压患者应在 2 亿以上</li>
+<li>糖尿病患者应在 0.9 亿以上</li>
+<li>肥胖患者应在 0.9 亿以上</li>
+<li>超重者应在 3 亿以上</li>
+<li>超重者中有很大一部分将会发展为肥胖</li>
+</ul>
+</li>
+<li>
+<p>WHO 提出了 21 世纪的世界卫生目标：</p>
+<ul>
+<li>使所有的人增加健康生活的时间，缩小各社会群体之间在健康水平方面的差距</li>
+<li>改善妇女健康与福利，孕产妇死亡率下降 50%</li>
+<li>促进所有人保持健康生活方式与健康行为</li>
+</ul>
+</li>
+<li>
+<p>HFA （人人享有卫生保健）产生背景：</p>
+<ul>
+<li>富国和穷国的差距越来越大</li>
+<li>发展学家提出要建设一个“人人受益”的国际新秩序</li>
+<li>ASHA （美国社会健康协会）指出社会发展主要取决于：成人识字率、就业率、平均寿命、国民经济年增长率、出生率和婴儿死亡率</li>
+</ul>
+</li>
+<li>
+<p>基本卫生保健的核心是：<code class="language-vim">卫生公平性</code></p>
+</li>
+<li>
+<p>根据我国基本卫生保健长期性的特点，在实施过程中需妥善解决的三个问题：</p>
+<ul>
+<li>建立各级政府领导负责的、有关部门参加的基本卫生保健委员会或相应的组织，协调各方面工作</li>
+<li>制定本地区的基本卫生保健发展规划、分步骤实施，定期进行评价，及时调整工作重心</li>
+<li>制定有关政策，制止卫生资源浪费，解决卫生资源分配不公的问题</li>
+</ul>
+</li>
+<li>
+<p>基本卫生保健的意义</p>
+<ul>
+<li>充分享有健康权</li>
+<li>促进社会经济发展</li>
+<li>提高人人健康水平</li>
+<li>提高精神文明水平</li>
+</ul>
+</li>
+<li>
+<p>我国农村初级卫生保健的<code class="language-vim">三大支柱</code>：<code class="language-vim">县乡村三级医疗卫生服务网络</code>、<code class="language-vim">农村卫生队伍</code>、<code class="language-vim">合作医疗制度</code></p>
+</li>
+<li>
+<p>WHO 提出“2020 年人人享有卫生保健”全球卫生战略目标是在<code class="language-vim">1977 年第三十届世界卫生大会</code></p>
+</li>
+</ul>
 
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
@@ -205,7 +479,7 @@ All rights reserved.</span><span class="footer-modification">
                 "next_page_link": "01.html"
             },
             "basePath": "../../..",
-            "js": {}
+            "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
         });
     });
 </script>
