--- a/md/基础知识/02/习题.html
+++ b/md/基础知识/02/习题.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<title>健康管理师 - 第六节 脑卒中</title>
+<title>健康管理师 - 习题</title>
 <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
 <meta content="" name="description">
 <meta content="刘士" name="author">
@@ -20,7 +20,7 @@
       rel="apple-touch-icon-precomposed" sizes="152x152">
 <link href="../../../../asserts/lsbook/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <!--分页-->
-<link href="07.html" rel="next"/>
+<link href="../03/index.html" rel="next"/>
 </head>
 <body>
 <div class="book"><div class="book-summary">
@@ -38,25 +38,25 @@
 <li class="chapter" data-level="2.1.3" data-path="../01/03.html"><a href="../01/03.html"><b>2.1.3.</b>第三节 健康管理的发展趋势</a></li>
 <li class="chapter" data-level="2.1.4" data-path="../01/04.html"><a href="../01/04.html"><b>2.1.4.</b>第四节 基本卫生保健</a></li>
 <li class="chapter" data-level="2.1.5" data-path="../01/习题.html"><a href="../01/习题.html"><b>2.1.5.</b>习题</a></li></ul></li>
-<li class="chapter" data-level="2.2" data-path="../02/index.html"><a href="../02/index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
-<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="../02/01.html"><a href="../02/01.html"><b>2.2.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.2.2" data-path="../02/02.html"><a href="../02/02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
-<li class="chapter" data-level="2.2.3" data-path="../02/03.html"><a href="../02/03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
-<li class="chapter" data-level="2.2.4" data-path="../02/04.html"><a href="../02/04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
-<li class="chapter" data-level="2.2.5" data-path="../02/习题.html"><a href="../02/习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
+<li class="chapter" data-level="2.2" data-path="index.html"><a href="index.html"><b>2.2.</b>第二章 临床医学基础知识</a>
+<ul class="articles"><li class="chapter" data-level="2.2.1" data-path="01.html"><a href="01.html"><b>2.2.1.</b>第一节 概述</a></li>
+<li class="chapter" data-level="2.2.2" data-path="02.html"><a href="02.html"><b>2.2.2.</b>第二节 现代医学主要诊断方法和技术</a></li>
+<li class="chapter" data-level="2.2.3" data-path="03.html"><a href="03.html"><b>2.2.3.</b>第三节 现代医学主要治疗方法</a></li>
+<li class="chapter" data-level="2.2.4" data-path="04.html"><a href="04.html"><b>2.2.4.</b>第四节 临床医学在健康管理中的应用</a></li>
+<li class="chapter active" data-level="2.2.5" data-path="习题.html"><a href="习题.html"><b>2.2.5.</b>习题</a></li></ul></li>
 <li class="chapter" data-level="2.3" data-path="../03/index.html"><a href="../03/index.html"><b>2.3.</b>第三章 预防医学基础知识</a>
 <ul class="articles"><li class="chapter" data-level="2.3.1" data-path="../03/01.html"><a href="../03/01.html"><b>2.3.1.</b>第一节 预防医学概述</a></li>
 <li class="chapter" data-level="2.3.2" data-path="../03/02.html"><a href="../03/02.html"><b>2.3.2.</b>第二节 临床预防服务</a></li>
 <li class="chapter" data-level="2.3.3" data-path="../03/03.html"><a href="../03/03.html"><b>2.3.3.</b>第三节 社区公共卫生服务</a></li></ul></li>
-<li class="chapter" data-level="2.4" data-path="index.html"><a href="index.html"><b>2.4.</b>第四章 常见慢性病</a>
-<ul class="articles"><li class="chapter" data-level="2.4.1" data-path="01.html"><a href="01.html"><b>2.4.1.</b>第一节 概述</a></li>
-<li class="chapter" data-level="2.4.2" data-path="02.html"><a href="02.html"><b>2.4.2.</b>第二节 恶性肿瘤</a></li>
-<li class="chapter" data-level="2.4.3" data-path="03.html"><a href="03.html"><b>2.4.3.</b>第三节 高血压</a></li>
-<li class="chapter" data-level="2.4.4" data-path="04.html"><a href="04.html"><b>2.4.4.</b>第四节 2 型糖尿病</a></li>
-<li class="chapter" data-level="2.4.5" data-path="05.html"><a href="05.html"><b>2.4.5.</b>第五节 冠状动脉粥样硬化性心脏病</a></li>
-<li class="chapter active" data-level="2.4.6" data-path="06.html"><a href="06.html"><b>2.4.6.</b>第六节 脑卒中</a></li>
-<li class="chapter" data-level="2.4.7" data-path="07.html"><a href="07.html"><b>2.4.7.</b>第七节 慢性阻塞性肺疾病</a></li>
-<li class="chapter" data-level="2.4.8" data-path="08.html"><a href="08.html"><b>2.4.8.</b>第八节 其他常见慢性病</a></li></ul></li>
+<li class="chapter" data-level="2.4" data-path="../04/index.html"><a href="../04/index.html"><b>2.4.</b>第四章 常见慢性病</a>
+<ul class="articles"><li class="chapter" data-level="2.4.1" data-path="../04/01.html"><a href="../04/01.html"><b>2.4.1.</b>第一节 概述</a></li>
+<li class="chapter" data-level="2.4.2" data-path="../04/02.html"><a href="../04/02.html"><b>2.4.2.</b>第二节 恶性肿瘤</a></li>
+<li class="chapter" data-level="2.4.3" data-path="../04/03.html"><a href="../04/03.html"><b>2.4.3.</b>第三节 高血压</a></li>
+<li class="chapter" data-level="2.4.4" data-path="../04/04.html"><a href="../04/04.html"><b>2.4.4.</b>第四节 2 型糖尿病</a></li>
+<li class="chapter" data-level="2.4.5" data-path="../04/05.html"><a href="../04/05.html"><b>2.4.5.</b>第五节 冠状动脉粥样硬化性心脏病</a></li>
+<li class="chapter" data-level="2.4.6" data-path="../04/06.html"><a href="../04/06.html"><b>2.4.6.</b>第六节 脑卒中</a></li>
+<li class="chapter" data-level="2.4.7" data-path="../04/07.html"><a href="../04/07.html"><b>2.4.7.</b>第七节 慢性阻塞性肺疾病</a></li>
+<li class="chapter" data-level="2.4.8" data-path="../04/08.html"><a href="../04/08.html"><b>2.4.8.</b>第八节 其他常见慢性病</a></li></ul></li>
 <li class="chapter" data-level="2.5" data-path="../05/index.html"><a href="../05/index.html"><b>2.5.</b>第五章 流行病学和医学统计学基本知识</a>
 <ul class="articles"><li class="chapter" data-level="2.5.1" data-path="../05/01.html"><a href="../05/01.html"><b>2.5.1.</b>第一节 流行病学的基本知识</a></li>
 <li class="chapter" data-level="2.5.2" data-path="../05/02.html"><a href="../05/02.html"><b>2.5.2.</b>第二节 医学统计学的基本知识</a></li></ul></li>
@@ -129,7 +129,7 @@
         <!-- Title -->
         <h1>
             <i class="fa fa-circle-o-notch fa-spin"></i>
-            <a href="../../..">第六节 脑卒中</a>
+            <a href="../../..">习题</a>
         </h1>
     </div>
 
@@ -138,8 +138,15 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        
-                        
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>习题</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>单项选择题</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>习题</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 单项选择题</h2>
+<ol>
+<li>
+<sec data-title="解析"><div class="panel panel-default"><div class="panel-heading"><b>解析<a class="pull-right section atTitle btn btn-default " target="sectionx1"><span class="fa fa-angle-down" /></a></b></div><div class="panel-collapse collapse" id="sectionx1"><div class="panel-body"></div></div></div></sec>
+</li>
+</ol>
+
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
@@ -176,12 +183,12 @@ All rights reserved.</span><span class="footer-modification">
 </div>
 
 
-<a aria-label="Previous page: 第五节 冠状动脉粥样硬化性心脏病" class="navigation navigation-prev" href="05.html">
+<a aria-label="Previous page: 第四节 临床医学在健康管理中的应用" class="navigation navigation-prev" href="04.html">
     <i class="fa fa-angle-left"></i>
 </a>
 
 
-<a aria-label="Next page: 第七节 慢性阻塞性肺疾病" class="navigation navigation-next" href="07.html">
+<a aria-label="Next page: 第三章 预防医学基础知识" class="navigation navigation-next" href="../03/index.html">
     <i class="fa fa-angle-right"></i>
 </a>
 
@@ -194,8 +201,8 @@ All rights reserved.</span><span class="footer-modification">
             "config": {
                 "github_url":"https://liushilive.github.io/",
                 "language": "zh-cn",
-                "previous_page_link": "05.html",
-                "next_page_link": "07.html"
+                "previous_page_link": "04.html",
+                "next_page_link": "../03/index.html"
             },
             "basePath": "../../..",
             "js": {}
